Fixed the z-index problems

--- a/css/framework/main.scss
+++ b/css/framework/main.scss
@@ -24,6 +24,7 @@ $aswindow-expand-button-height:18px;
 
 .aswindow {
   position: absolute;
+  background:white;
   width: $aswindow-size;
   border: 1px dotted black;
 
